--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
-# Express Settings
+# Express env
 EXPRESS_PORT=3000
+
+# Postgres env
+POSTGRES_HOST=postgres
+POSTGRES_DB=postgres
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
