--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 EXPRESS_PORT=3000
 
 # Postgres env
-POSTGRES_HOST=postgres
-POSTGRES_DB=postgres
-POSTGRES_PORT=5432
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=password
+PGUSER=postgres
+PGPASSWORD=password
+PGHOST=postgres
+PGPORT=5432
+PGDATABASE=postgres
